💄  (sidebar)-fix scrollbar

--- a/doc/src/components/WithComponentsBar/styles.scss
+++ b/doc/src/components/WithComponentsBar/styles.scss
@@ -29,9 +29,6 @@
         }
         &::-webkit-scrollbar {
             width: 0.4em;
-            &:hover {
-                width: 1em;
-            }
         }
         &::-webkit-scrollbar-thumb {
             background-color: #2b87d7c7;
